# ClosestX11Color

./: .gitignore  ISSUES.md  LICENSE  Pipfile  README.md  black_or_white.json  colored_button.ui  colors.csv  compile_gui.sh  dist.py  helper.py  main.py  pyproject.toml  readFile.py  showMainGui.py
color_charts/: README.md
